fix spacing and width

--- a/src/app/components/calculator/Calculator.module.scss
+++ b/src/app/components/calculator/Calculator.module.scss
@@ -10,8 +10,7 @@
     display: flex;
     position: relative;
     flex-direction: column;
-    width: 90vw;
-    max-width: 1200px;
+    width: 95vw;
     height: auto;
     background-color: #F8F6F2;
     border: solid 8px #987D56;
